--- a/smart-contracts/package.json
+++ b/smart-contracts/package.json
@@ -29,7 +29,8 @@
     "zos-lib": "2.2.2"
   },
   "devDependencies": {
-    "remixd": "0.1.8-alpha.6"
+    "remixd": "0.1.8-alpha.6",
+    "truffle-security": "1.3.4"
   },
   "lint-staged": {
     "linters": {
@@ -47,7 +48,8 @@
     "ci": "npm run lint && npm run test && npm run reports",
     "build": "truffle compile --all",
     "zos": "zos",
-    "reports": "truffle test ./reports/gas.js"
+    "reports": "truffle test ./reports/gas.js",
+    "verify": "truffle run verify"
   },
   "author": "",
   "license": "ISC"
