--- a/paywall/package.json
+++ b/paywall/package.json
@@ -31,6 +31,7 @@
     "@unlock-protocol/unlock-js": "0.0.4",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-source-maps": "0.0.3",
+    "@zeit/next-typescript": "^1.1.1",
     "axios": "^0.18.0",
     "babel-plugin-require-context-hook": "^1.0.0",
     "connected-react-router": "^6.3.0",
