--- a/paywall/package.json
+++ b/paywall/package.json
@@ -66,7 +66,8 @@
     "styled-components": "^4.2.0",
     "ts-jest": "^24.0.2",
     "typescript": "^3.4.3",
-    "unlock-abi-0": "^1.0.1"
+    "unlock-abi-0": "^1.0.1",
+    "web3": "1.0.0-beta.37"
   },
   "devDependencies": {
     "@svgr/cli": "4.2.0",
