storybook cannot be upgraded because it currently breaks

--- a/paywall/package.json
+++ b/paywall/package.json
@@ -19,11 +19,12 @@
   },
   "dependencies": {
     "@babel/core": "7.4.3",
-    "@storybook/addon-actions": "5.0.6",
-    "@storybook/addon-knobs": "5.0.6",
-    "@storybook/addon-storyshots": "5.0.6",
-    "@storybook/addon-viewport": "5.0.6",
-    "@storybook/react": "^5.0.6",
+    "@storybook/addon-actions": "4.1.13",
+    "@storybook/addon-knobs": "4.1.13",
+    "@storybook/addon-storyshots": "4.1.13",
+    "@storybook/addon-viewport": "4.1.13",
+    "@storybook/addons": "4.1.13",
+    "@storybook/react": "4.1.13",
     "@types/jest": "^24.0.11",
     "@types/node": "^11.13.4",
     "@types/react": "16.8.13",
