--- a/paywall/package.json
+++ b/paywall/package.json
@@ -44,9 +44,7 @@
     "jest-dom": "3.1.3",
     "jest-mock-axios": "2.4.0",
     "jest-styled-components": "^6.3.1",
-    "jsonwebtoken": "^8.4.0",
-    "next": "8.0.4",
-    "nock": "^10.0.6",
+    "next": "^8.0.4",
     "path-match": "^1.2.4",
     "postcss-nested": "^4.1.2",
     "postcss-simple-vars": "^5.0.2",
@@ -65,13 +63,11 @@
     "rollup-plugin-terser": "^4.0.4",
     "run-script-os": "^1.0.5",
     "storybook-react-router": "^1.0.2",
-    "styled-components": "4.2.0",
-    "ts-jest": "24.0.2",
-    "typescript": "3.4.3",
+    "styled-components": "^4.2.0",
+    "ts-jest": "^24.0.2",
+    "typescript": "^3.4.3",
     "unlock-abi-0": "^1.0.1",
-    "web3": "1.0.0-beta.37",
-    "web3-eth-abi": "1.0.0-beta.37",
-    "web3-utils": "1.0.0-beta.37"
+    "web3": "1.0.0-beta.37"
   },
   "devDependencies": {
     "@svgr/cli": "4.2.0",
