--- a/tickets/package.json
+++ b/tickets/package.json
@@ -45,6 +45,7 @@
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-redux": "7.0.1",
+    "react-select": "2.4.2",
     "react-test-renderer": "16.8.6",
     "react-testing-library": "6.1.2",
     "redux": "4.0.1",
