--- a/paywall/package.json
+++ b/paywall/package.json
@@ -25,48 +25,48 @@
     "@storybook/addon-viewport": "4.1.13",
     "@storybook/addons": "4.1.13",
     "@storybook/react": "4.1.13",
-    "@types/jest": "^24.0.11",
-    "@types/node": "^11.13.4",
+    "@types/jest": "24.0.11",
+    "@types/node": "11.13.4",
     "@types/react": "16.8.13",
-    "@types/react-dom": "^16.8.3",
+    "@types/react-dom": "16.8.3",
     "@unlock-protocol/unlock-js": "0.0.5",
-    "@zeit/next-css": "^1.0.1",
+    "@zeit/next-css": "1.0.1",
     "@zeit/next-source-maps": "0.0.3",
-    "@zeit/next-typescript": "^1.1.1",
-    "axios": "^0.18.0",
-    "babel-plugin-require-context-hook": "^1.0.0",
-    "connected-react-router": "^6.3.0",
-    "copyfiles": "^2.1.0",
-    "cross-env": "^5.2.0",
-    "cssnano": "^4.1.10",
-    "ethereumjs-util": "^6.0.0",
-    "history": "^4.7.2",
+    "@zeit/next-typescript": "1.1.1",
+    "axios": "0.18.0",
+    "babel-plugin-require-context-hook": "1.0.0",
+    "connected-react-router": "6.3.0",
+    "copyfiles": "2.1.0",
+    "cross-env": "5.2.0",
+    "cssnano": "4.1.10",
+    "ethereumjs-util": "6.0.0",
+    "history": "4.7.2",
     "jest-dom": "3.1.3",
     "jest-mock-axios": "2.4.0",
-    "jest-styled-components": "^6.3.1",
-    "next": "^8.0.4",
-    "path-match": "^1.2.4",
-    "postcss-nested": "^4.1.2",
-    "postcss-simple-vars": "^5.0.2",
+    "jest-styled-components": "6.3.1",
+    "next": "8.0.4",
+    "path-match": "1.2.4",
+    "postcss-nested": "4.1.2",
+    "postcss-simple-vars": "5.0.2",
     "prop-types": "15.7.2",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-hooks-testing-library": "^0.4.0",
-    "react-redux": "^7.0.1",
-    "react-router": "^5.0.0",
-    "react-test-renderer": "^16.8.6",
+    "react": "16.8.6",
+    "react-dom": "16.8.6",
+    "react-hooks-testing-library": "0.4.0",
+    "react-redux": "7.0.1",
+    "react-router": "5.0.0",
+    "react-test-renderer": "16.8.6",
     "react-testing-library": "6.1.2",
-    "redux": "^4.0.1",
-    "rollup": "^1.6.0",
-    "rollup-plugin-babel": "^4.3.2",
-    "rollup-plugin-postcss": "^2.0.3",
-    "rollup-plugin-terser": "^4.0.4",
-    "run-script-os": "^1.0.5",
-    "storybook-react-router": "^1.0.2",
-    "styled-components": "^4.2.0",
-    "ts-jest": "^24.0.2",
-    "typescript": "^3.4.3",
-    "unlock-abi-0": "^1.0.1",
+    "redux": "4.0.1",
+    "rollup": "1.6.0",
+    "rollup-plugin-babel": "4.3.2",
+    "rollup-plugin-postcss": "2.0.3",
+    "rollup-plugin-terser": "4.0.4",
+    "run-script-os": "1.0.5",
+    "storybook-react-router": "1.0.2",
+    "styled-components": "4.2.0",
+    "ts-jest": "24.0.2",
+    "typescript": "3.4.3",
+    "unlock-abi-0": "1.0.1",
     "web3": "1.0.0-beta.37"
   },
   "devDependencies": {
