Adds required dependencies for initial pass at purchaser

--- a/locksmith/package.json
+++ b/locksmith/package.json
@@ -37,6 +37,7 @@
     "@types/node": "^11.13.4",
     "@typescript-eslint/eslint-plugin": "^1.5.0",
     "@types/sequelize": "^4.27.44",
+    "@unlock-protocol/unlock-js": "0.0.5",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "cross-env": "^5.2.0",
@@ -56,6 +57,7 @@
     "sequelize": "^5.3.1",
     "sequelize-cli": "^5.4.0",
     "supertest": "^4.0.2",
+    "truffle-hdwallet-provider": "^1.0.6",
     "ts-jest": "24.0.2",
     "typescript": "3.4.3",
     "web3": "1.0.0-beta.37",
