--- a/locksmith/package.json
+++ b/locksmith/package.json
@@ -35,8 +35,9 @@
     "@types/express-serve-static-core": "^4.16.2",
     "@types/jest": "^24.0.11",
     "@types/node": "^11.13.4",
-    "@typescript-eslint/eslint-plugin": "^1.5.0",
     "@types/sequelize": "^4.27.44",
+    "@types/stripe": "^6.25.10",
+    "@typescript-eslint/eslint-plugin": "^1.5.0",
     "@unlock-protocol/unlock-js": "0.0.5",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
@@ -56,6 +57,7 @@
     "random-words": "^1.1.0",
     "sequelize": "^5.3.1",
     "sequelize-cli": "^5.4.0",
+    "stripe": "^6.28.0",
     "supertest": "^4.0.2",
     "truffle-hdwallet-provider": "^1.0.6",
     "ts-jest": "24.0.2",
