--- a/tickets/package.json
+++ b/tickets/package.json
@@ -42,6 +42,7 @@
     "jest-styled-components": "6.3.1",
     "next": "8.0.4",
     "prop-types": "15.7.2",
+    "qrcode": "^1.3.3",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-redux": "7.0.2",
