--- a/tickets/package.json
+++ b/tickets/package.json
@@ -41,6 +41,7 @@
     "jest-mock-axios": "2.4.0",
     "jest-styled-components": "6.3.1",
     "next": "8.0.4",
+    "path-match": "^1.2.4",
     "prop-types": "15.7.2",
     "qrcode": "^1.3.3",
     "react": "16.8.6",
