--- a/locksmith/package.json
+++ b/locksmith/package.json
@@ -55,8 +55,10 @@
     "node-mocks-http": "^1.7.3",
     "pg": "^7.7.1",
     "random-words": "^1.1.0",
+    "reflect-metadata": "^0.1.13",
     "sequelize": "^5.3.1",
     "sequelize-cli": "^5.4.0",
+    "sequelize-typescript": "^0.6.10",
     "stripe": "^6.28.0",
     "supertest": "^4.0.2",
     "truffle-hdwallet-provider": "^1.0.7",
