--- a/paywall/package.json
+++ b/paywall/package.json
@@ -42,6 +42,7 @@
     "cross-env": "^5.2.0",
     "cssnano": "^4.1.10",
     "ethereumjs-util": "^6.0.0",
+    "fork-ts-checker-webpack-plugin": "^1.0.3",
     "history": "^4.7.2",
     "jest-dom": "3.1.3",
     "jest-mock-axios": "2.4.0",
