adding unlock-abi-0-2

--- a/unlock-js/package.json
+++ b/unlock-js/package.json
@@ -15,6 +15,7 @@
     "ethereumjs-util": "^6.0.0",
     "unlock-abi-0": "^1.0.4",
     "unlock-abi-0-1": "^1.0.0",
+    "unlock-abi-0-2": "^1.0.0",
     "web3": "1.0.0-beta.37",
     "web3-eth-abi": "1.0.0-beta.37",
     "web3-utils": "1.0.0-beta.37"
