--- a/tickets/package.json
+++ b/tickets/package.json
@@ -54,9 +54,7 @@
     "run-script-os": "1.0.5",
     "styled-components": "4.2.0",
     "ts-jest": "24.0.2",
-    "typescript": "3.4.3",
-    "web3": "1.0.0-beta.37",
-    "web3-utils": "1.0.0-beta.37"
+    "typescript": "3.4.3"
   },
   "devDependencies": {
     "@svgr/cli": "4.2.0",
