--- a/paywall/package.json
+++ b/paywall/package.json
@@ -40,6 +40,7 @@
     "copyfiles": "^2.1.0",
     "cross-env": "^5.2.0",
     "cssnano": "^4.1.10",
+    "dotenv": "^7.0.0",
     "ethereumjs-util": "^6.0.0",
     "fork-ts-checker-webpack-plugin": "^1.0.3",
     "history": "^4.7.2",
