--- a/tickets/package.json
+++ b/tickets/package.json
@@ -36,6 +36,7 @@
     "axios": "0.18.0",
     "babel-plugin-require-context-hook": "1.0.0",
     "cross-env": "5.2.0",
+    "dotenv": "^7.0.0",
     "fork-ts-checker-webpack-plugin": "^1.0.0",
     "jest-dom": "3.1.3",
     "jest-mock-axios": "2.4.0",
