enabling the use of dotfiles for config when running applications

--- a/unlock-app/package.json
+++ b/unlock-app/package.json
@@ -68,6 +68,7 @@
   "scripts": {
     "predev": "npm run start-ganache && npm run deploy-unlock-contract",
     "dev": "nodemon src/server.js",
+    "nodemon": "nodemon",
     "build": "next build src",
     "deploy": "next export src -o out",
     "deploy-netlify": "./scripts/deploy-netlify.sh",
