--- a/tickets/package.json
+++ b/tickets/package.json
@@ -46,7 +46,7 @@
     "next": "8.1.0",
     "path-match": "^1.2.4",
     "prop-types": "15.7.2",
-    "qrcode": "^1.3.3",
+    "qrcode.react": "^0.9.3",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-redux": "7.0.2",
