--- a/tickets/package.json
+++ b/tickets/package.json
@@ -4,6 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "nodemon src/server.js",
+    "predev": "npm run start-ganache && npm run start-clean-locksmith && npm run deploy-contracts",
+    "start-ganache": "run-script-os",
+    "start-ganache:darwin:freebsd:linux:sunos": "cd .. && (npm run start-ganache -- -b 3 &) ",
+    "start-ganache:win32": "cd .. && (START /b npm run start-ganache -- -b 3 ) ",
+    "start-clean-locksmith": "cd ../locksmith && rm development.sqlite3 && npm run dev &",
+    "deploy-contracts": "node scripts/deploy-unlock.js",
     "build": "next build src",
     "deploy": "next export src -o out",
     "deploy-netlify": "./scripts/deploy-netlify.sh",
@@ -58,7 +64,8 @@
     "run-script-os": "1.0.5",
     "styled-components": "4.2.0",
     "ts-jest": "24.0.2",
-    "typescript": "3.4.5"
+    "typescript": "3.4.5",
+    "unlock-abi-0-2": "^1.0.0"
   },
   "devDependencies": {
     "@svgr/cli": "4.2.0",
