--- a/locksmith/package.json
+++ b/locksmith/package.json
@@ -29,6 +29,7 @@
   "author": "Unlock Inc",
   "license": "ISC",
   "dependencies": {
+    "@types/cors": "^2.8.5",
     "@types/eth-sig-util": "^2.1.0",
     "@types/ethereumjs-util": "^5.2.0",
     "@types/express": "^4.16.1",
