--- a/unlock-js/package.json
+++ b/unlock-js/package.json
@@ -12,14 +12,10 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "ethereumjs-util": "^6.0.0",
     "ethers": "4.0.27",
     "unlock-abi-0": "^1.0.4",
     "unlock-abi-0-1": "^1.0.0",
-    "unlock-abi-0-2": "^1.0.0",
-    "web3": "1.0.0-beta.37",
-    "web3-eth-abi": "1.0.0-beta.37",
-    "web3-utils": "1.0.0-beta.37"
+    "unlock-abi-0-2": "^1.0.0"
   },
   "lint-staged": {
     "linters": {
