--- a/wedlocks/package.json
+++ b/wedlocks/package.json
@@ -14,7 +14,8 @@
     "nodemailer": "^6.1.0",
     "nodemon": "^1.19.0",
     "webpack": "^4.29.6",
-    "webpack-cli": "^3.3.0"
+    "webpack-cli": "^3.3.0",
+    "winston": "^3.2.1"
   },
   "lint-staged": {
     "linters": {
