Locksmith local dev gets a ganache-cli

--- a/locksmith/package.json
+++ b/locksmith/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "prestart": "npm run build",
     "start": "node ./build/server.js",
-    "predev": "NODE_ENV=development npm run db:migrate",
+    "start-ganache": "run-script-os",
+    "start-ganache:darwin:freebsd:linux:sunos": "cd .. && (npm run start-ganache -- -b 3 &) ",
+    "start-ganache:win32": "cd .. && (START /b npm run start-ganache -- -b 3 ) ",
+    "predev": "NODE_ENV=development npm run db:migrate && npm run start-ganache",
     "dev": "tsc-watch --onSuccess 'node build/server.js' --onFailure 'echo Beep! Compilation Failed'",
     "pretest": "NODE_ENV=test sequelize db:migrate",
     "test": "jest --forceExit",
@@ -58,6 +61,7 @@
     "pg": "^7.7.1",
     "random-words": "^1.1.0",
     "reflect-metadata": "^0.1.13",
+    "run-script-os": "1.0.5",
     "sequelize": "^5.3.1",
     "sequelize-cli": "^5.4.0",
     "sequelize-typescript": "^0.6.10",
