--- a/unlock-js/package.json
+++ b/unlock-js/package.json
@@ -17,6 +17,7 @@
     "unlock-abi-0-1": "^1.0.0",
     "unlock-abi-0-2": "^1.0.0"
   },
+  "browserslist": "> 0.25%, not dead",
   "lint-staged": {
     "linters": {
       "*.{js,ts}": [
