--- a/paywall/package.json
+++ b/paywall/package.json
@@ -68,7 +68,8 @@
     "storybook-react-router": "^1.0.5",
     "styled-components": "^4.2.0",
     "ts-jest": "^24.0.2",
-    "typescript": "3.4.5"
+    "typescript": "3.4.5",
+    "validator": "^10.11.0"
   },
   "devDependencies": {
     "@svgr/cli": "4.2.0",
