--- a/unlock-js/package.json
+++ b/unlock-js/package.json
@@ -28,6 +28,8 @@
     }
   },
   "devDependencies": {
+    "jest": "^24.1.0",
+    "nock": "^10.0.5",
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.3.4",
     "@babel/preset-env": "^7.4.2",
