--- a/unlock-js/.babelrc
+++ b/unlock-js/.babelrc
@@ -1,5 +1,17 @@
 {
   "env": {
+    "test": {
+      "presets": [
+        [
+          "@babel/preset-env",
+          {
+            "targets": {
+              "node": "current"
+            }
+          }
+        ]
+      ]
+    },
     "cjs": {
       "presets": [
         [
