fix cjs build, add clean step, use generated index.js, CHANGELOG added

--- a/unlock-js/package.json
+++ b/unlock-js/package.json
@@ -1,16 +1,17 @@
 {
   "name": "@unlock-protocol/unlock-js",
-  "version": "0.0.24",
+  "version": "0.0.25",
   "description": "This module provides libraries to include Unlock APIs inside a Javascript application.",
-  "main": "index.js",
+  "main": "lib/index.js",
   "module": "esm/index.js",
   "sideEffects": false,
   "scripts": {
     "test": "jest",
     "lint": "eslint --ext .tsx,.ts,.js src/",
     "build-esm": "BABEL_ENV=esm ./node_modules/.bin/babel src --ignore src/__tests__ --out-dir esm",
-    "build-cjs": "BABEL_ENV=esm ./node_modules/.bin/babel src --ignore src/__tests__ --out-dir lib",
-    "build": "node ./scripts/compressAbi.js && npm run build-cjs && npm run build-esm",
+    "build-cjs": "BABEL_ENV=cjs ./node_modules/.bin/babel src --ignore src/__tests__ --out-dir lib",
+    "build": "npm run clean && node ./scripts/compressAbi.js && npm run build-cjs && npm run build-esm",
+    "clean": "rm -rf lib/ && rm -rf esm/",
     "ci": "npm run lint && npm run test"
   },
   "author": "",
