--- a/unlock-app/package.json
+++ b/unlock-app/package.json
@@ -33,11 +33,14 @@
     "jest-dom": "3.2.1",
     "jest-mock-axios": "2.4.0",
     "jest-styled-components": "^6.3.1",
+    "js-base64": "^2.5.1",
     "jsonwebtoken": "^8.4.0",
     "next": "8.1.0",
     "nock": "^10.0.5",
+    "node-forge": "^0.8.2",
     "path-match": "^1.2.4",
     "prop-types": "15.7.2",
+    "query-string": "^6.5.0",
     "react": "^16.8.6",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.8.6",
