--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
   "scripts": {
     "link-parent-bin": "link-parent-bin -c . -s true",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start-ganache": "ganache-cli -i 1984 --mnemonic 'hello unlock save the web'",
+    "start-ganache": "./scripts/start-ganache.sh",
     "postinstall": "./scripts/postinstall.sh",
     "build": "cd smart-contracts && npm run build && cd ../unlock-app && npm run build && cd ../locksmith && npm run build",
     "start": "./scripts/start.sh",
