--- a/locksmith/package.json
+++ b/locksmith/package.json
@@ -43,7 +43,7 @@
     "@types/stripe": "^6.25.10",
     "@types/supertest": "^2.0.7",
     "@typescript-eslint/eslint-plugin": "^1.5.0",
-    "@unlock-protocol/unlock-js": "0.0.21",
+    "@unlock-protocol/unlock-js": "0.0.27",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "cross-env": "^5.2.0",
@@ -70,6 +70,7 @@
     "truffle-hdwallet-provider": "^1.0.7",
     "ts-jest": "24.0.2",
     "typescript": "3.4.5",
+    "unlock-abi-0-2": "1.0.0",
     "web3": "1.0.0-beta.37",
     "winston": "^3.1.0"
   },
