--- a/locksmith/package.json
+++ b/locksmith/package.json
@@ -32,6 +32,7 @@
   "author": "Unlock Inc",
   "license": "ISC",
   "dependencies": {
+    "@opencensus/core": "0.0.12",
     "@types/cors": "^2.8.5",
     "@types/eth-sig-util": "^2.1.0",
     "@types/ethereumjs-util": "^5.2.0",
