--- a/docker/docker-compose.development.yml
+++ b/docker/docker-compose.development.yml
@@ -7,3 +7,14 @@ services:
        dockerfile: ganache.dockerfile
      ports:
        - 8545:8545
+   jaeger:
+      restart: always
+      image: jaegertracing/all-in-one:1.6
+      ports:
+        - '5775:5775/udp'
+        - '6831:6831/udp'
+        - '6832:6832/udp'
+        - '5778:5778'
+        - '16686:16686'
+        - '14268:14268'
+        - '9411:9411'
