--- a/tickets/package.json
+++ b/tickets/package.json
@@ -34,7 +34,7 @@
     "@types/react": "16.8.17",
     "@types/react-redux": "7.0.8",
     "@types/storybook__react": "4.0.1",
-    "@types/styled-components": "4.1.14",
+    "@types/styled-components": "^4.1.14",
     "@unlock-protocol/unlock-js": "0.0.30",
     "@zeit/next-css": "1.0.1",
     "@zeit/next-source-maps": "0.0.3",
