--- a/unlock-app/package.json
+++ b/unlock-app/package.json
@@ -15,7 +15,7 @@
     "@types/react": "16.8.17",
     "@types/react-redux": "7.0.8",
     "@types/storybook__react": "^4.0.1",
-    "@types/styled-components": "4.1.14",
+    "@types/styled-components": "^4.1.14",
     "@unlock-protocol/unlock-js": "0.0.29",
     "@zeit/next-source-maps": "0.0.3",
     "@zeit/next-typescript": "^1.1.1",
