--- a/paywall/package.json
+++ b/paywall/package.json
@@ -25,7 +25,7 @@
     "@storybook/addon-viewport": "5.0.10",
     "@storybook/addons": "5.0.10",
     "@storybook/react": "5.0.10",
-    "@types/jest": "^24.0.11",
+    "@types/jest": "24.0.13",
     "@types/node": "^12.0.0",
     "@types/react": "16.8.17",
     "@types/react-dom": "^16.8.3",
