--- a/unlock-protocol.com/package.json
+++ b/unlock-protocol.com/package.json
@@ -10,7 +10,7 @@
     "@storybook/addon-viewport": "5.0.10",
     "@storybook/addons": "5.0.10",
     "@storybook/react": "5.0.10",
-    "@types/jest": "^24.0.11",
+    "@types/jest": "24.0.13",
     "@types/next": "8.0.5",
     "@types/react": "16.8.17",
     "@types/storybook__react": "^4.0.1",
