--- a/paywall/package.json
+++ b/paywall/package.json
@@ -65,6 +65,7 @@
     "rollup-plugin-postcss": "^2.0.3",
     "rollup-plugin-terser": "^4.0.4",
     "run-script-os": "^1.0.5",
+    "shallow-equal": "1.1.0",
     "storybook-react-router": "^1.0.5",
     "styled-components": "^4.2.0",
     "ts-jest": "^24.0.2",
